--- a/R/quantAb-mairie-mbita.Rmd
+++ b/R/quantAb-mairie-mbita.Rmd
@@ -19,8 +19,13 @@ here()
 
 library(tidyverse)
 library(mgcv)
-library(foreach)
 library(gridExtra)
+
+# set up for parallel computing
+# configure for a laptop (use only 3 cores)
+library(foreach)
+library(doParallel)
+registerDoParallel(cores=3)
 
 # grab some colors for plotting
 ggplotcols <- scales::hue_pal()(3)
@@ -36,7 +41,7 @@ corange <- "#EEA722"
 cyellow <- "#FFEE33"
 cgrey <- "#777777"
 
-pcols <- c(ggplotcols,cmagent,corange)
+pcols <- c(ggplotcols,corange)
 
 ```
 
@@ -51,14 +56,14 @@ d <- d %>%
   select(year,community=vid,
          pid,age=agey,
          wat01,toi01,
-         msp1,sea,sm25,ashb,nie,vsp5) %>%
-  mutate(agecat = cut(age,breaks=c(0,1,2,3,4,6)))
+         ashb,sea,msp1,vsp5) %>%
+  mutate(agecat = cut(age,breaks=c(0,1,2,3,4,6),labels=c("<1 year","1 year","2 years","3 years","4 years")))
 
 # reshape to long format
 dl <- d %>%
-  select(year,community,wat01,toi01,age,agecat,msp1,sea,nie,ashb,vsp5) %>%
+  select(year,community,wat01,toi01,age,agecat,ashb,sea,msp1,vsp5) %>%
   gather(key=antigen,value=mfi,-year,-community,-wat01,-toi01,-age,-agecat) %>%
-  mutate(antigen = factor(antigen,levels=c("ashb","nie","sea","msp1","vsp5"))) %>%
+  mutate(antigen = factor(antigen,levels=c("ashb","sea","msp1","vsp5"))) %>%
   group_by(year,community,antigen) %>%
   arrange(year,community,antigen,age)
 
@@ -67,10 +72,9 @@ dl <- dl %>%
 
 # add ROC-based cutoffs
 dl$roccut <- NA
-dl$roccut[dl$antigen %in% "msp1"] <- log10(170)
-dl$roccut[dl$antigen %in% "sea"] <- log10(965)
 dl$roccut[dl$antigen %in% "ashb"] <- log10(418)
-dl$roccut[dl$antigen %in% "nie"] <- log10(659)
+dl$roccut[dl$antigen %in% "sea"] <- log10(965)
+dl$roccut[dl$antigen %in% "msp1"] <- log10(170)
 dl$roccut[dl$antigen %in% "vsp5"] <- log10(281)
 
 # define seroprevalence based on ROC cutoffs
@@ -80,9 +84,8 @@ dl <- dl %>%
 
 # create formatted antigen labels
 dl <- dl %>%
-  mutate(antigenf=factor(antigen,levels=c("ashb","nie","sea","msp1","vsp5"),
+  mutate(antigenf=factor(antigen,levels=c("ashb","sea","msp1","vsp5"),
                          labels=c("Ascaris spp. AsHb",
-                                  "S. stercoralis NIE",
                                   "S. mansoni SEA",
                                   "P. falciparum MSP-1",
                                   "Giardia spp. VSP-5")))
@@ -110,8 +113,26 @@ pdist <- ggplot(data=dl,aes(x=logmfi,fill=antigen)) +
 
 pdist
 
+# limit to just SEA and Giardia for presentation
+pdist2 <- ggplot(data=filter(dl,antigen%in%c("sea","vsp5")),aes(x=logmfi,fill=antigen)) +
+  facet_grid(agecat~antigenf) +
+  geom_density(alpha=0.75,color=NA) +
+  geom_vline(aes(xintercept = roccut),lty=1) +
+  scale_fill_manual(values=pcols[c(2,4)])+
+  # geom_vline(aes(xintercept = mixcut),lty=2) +
+  labs(x="log10 luminex response (MFI-bg)") +
+  theme_minimal() + 
+  theme(legend.position = "none",
+        strip.text.y=element_text(angle=0,size=14),
+        strip.text.x=element_text(size=14))
 
-pdist2 <- ggplot(data=dl,aes(x=logmfi,fill=antigenf)) +
+pdist2
+# save png file for presentation
+ggsave(filename=here("output","mbita-ab-dists-sea-vsp.png"),plot=pdist2,device="png",width=5,height=7)
+
+
+
+pdist3 <- ggplot(data=dl,aes(x=logmfi,fill=antigenf)) +
   facet_grid(.~antigenf) +
   geom_density(alpha=0.5,color=NA) +
   geom_vline(aes(xintercept = roccut),lty=1) +
@@ -122,10 +143,10 @@ pdist2 <- ggplot(data=dl,aes(x=logmfi,fill=antigenf)) +
   theme(legend.position = "none",
         strip.text.y=element_text(angle=0))
 
-pdist2
+pdist3
 
 # save png file for presentation
-ggsave(filename=here("output","mbita-ab-dists.png"),plot=pdist2,device="png",width=8,height=2.5)
+ggsave(filename=here("output","mbita-ab-dists.png"),plot=pdist3,device="png",width=8,height=2.5)
 
 ```
 
@@ -212,11 +233,6 @@ dl <- dl %>%
 # cv_ashb
 # # k=4
 # set.seed(123)
-# sld <- filter(dl,antigen=="nie")
-# cv_nie <- SuperLearner(Y=sld$logmfi,X=select(sld,age), SL.library = paste("SL.mgcv.k",4:10,sep=""))
-# cv_nie
-# # k=4
-# set.seed(123)
 # sld <- filter(dl,antigen=="sea")
 # cv_sea <- SuperLearner(Y=sld$logmfi,X=select(sld,age), SL.library = paste("SL.mgcv.k",4:10,sep=""))
 # cv_sea
@@ -255,26 +271,20 @@ fit_ashb <- mgcv::gam(logmfi~s(age,bs="cr",k=4) + s(community,bs="re",by=dummy),
 newd <- dl %>% filter(antigen=="ashb") %>% mutate(dummy=0)
 fit_ashbci <- gamCI(m=fit_ashb,newdata=newd,nreps=10000)
 
-# Strongy NIE
-fit_nie <- mgcv::gam(logmfi~s(age,bs="cr",k=4) + s(community,bs="re",by=dummy), 
-                      data=filter(dl,antigen=="nie"))
-newd <- dl %>% filter(antigen=="nie") %>% mutate(dummy=0)
-fit_nieci <- gamCI(m=fit_nie,newdata=newd,nreps=10000)
-
 # Schisto SEA
 fit_sea <- mgcv::gam(logmfi~s(age,bs="cr",k=4) + s(community,bs="re",by=dummy), 
                       data=filter(dl,antigen=="sea"))
 newd <- dl %>% filter(antigen=="sea") %>% mutate(dummy=0)
 fit_seaci <- gamCI(m=fit_sea,newdata=newd,nreps=10000)
 
-fit_mfi <- bind_rows(fit_msp1ci,fit_vsp5ci,fit_ashbci,fit_nieci,fit_seaci)
+fit_mfi <- bind_rows(fit_msp1ci,fit_vsp5ci,fit_ashbci,fit_seaci)
 
 ```
 
 ```{r mean mfi by age plot}
 
-pagemfi <- ggplot(data=fit_mfi,aes(x=age,y=fit,color=antigen)) +
-  facet_grid(~antigen) +
+pagemfi <- ggplot(data=fit_mfi,aes(x=age,y=fit,color=antigenf)) +
+  facet_grid(~antigenf) +
   geom_point(aes(x=age,y=logmfi),alpha=0.1,size=0.2)+
   geom_ribbon(aes(ymin=lwrS,ymax=uprS),alpha=0.2,color=NA,fill="black") +
   geom_line(lwd=0.5,alpha=0.5,color="black") +
@@ -293,6 +303,20 @@ pagemfi
 ## Age dependent seroprevalence
 ```{r agecurves seroprev}
 
+
+
+# Ascaris AsHb
+fitp_ashb <- mgcv::gam(seropos~s(age,bs="cr",k=11) + s(community,bs="re",by=dummy), family="binomial",
+                      data=filter(dl,antigen=="ashb"))
+newd <- dl %>% filter(antigen=="ashb") %>% mutate(dummy=0)
+fitp_ashbci <- gamCI(m=fitp_ashb,newdata=newd,nreps=10000)
+
+# Schisto SEA
+fitp_sea <- mgcv::gam(seropos~s(age,bs="cr",k=9) + s(community,bs="re",by=dummy), family="binomial", 
+                      data=filter(dl,antigen=="sea"))
+newd <- dl %>% filter(antigen=="sea") %>% mutate(dummy=0)
+fitp_seaci <- gamCI(m=fitp_sea,newdata=newd,nreps=10000)
+
 # Pf Malaria MSP1 
 fitp_msp1 <- mgcv::gam(seropos~s(age,bs="cr",k=4) + s(community,bs="re",by=dummy), 
                       data=filter(dl,antigen=="msp1"))
@@ -306,25 +330,7 @@ newd <- dl %>% filter(antigen=="vsp5") %>% mutate(dummy=0)
 fitp_vsp5ci <- gamCI(m=fitp_vsp5,newdata=newd,nreps=10000)
 
 
-# Ascaris AsHb
-fitp_ashb <- mgcv::gam(seropos~s(age,bs="cr",k=11) + s(community,bs="re",by=dummy), family="binomial",
-                      data=filter(dl,antigen=="ashb"))
-newd <- dl %>% filter(antigen=="ashb") %>% mutate(dummy=0)
-fitp_ashbci <- gamCI(m=fitp_ashb,newdata=newd,nreps=10000)
-
-# Strongy NIE
-fitp_nie <- mgcv::gam(seropos~s(age,bs="cr",k=7) + s(community,bs="re",by=dummy), family="binomial", 
-                      data=filter(dl,antigen=="nie"))
-newd <- dl %>% filter(antigen=="nie") %>% mutate(dummy=0)
-fitp_nieci <- gamCI(m=fitp_nie,newdata=newd,nreps=10000)
-
-# Schisto SEA
-fitp_sea <- mgcv::gam(seropos~s(age,bs="cr",k=9) + s(community,bs="re",by=dummy), family="binomial", 
-                      data=filter(dl,antigen=="sea"))
-newd <- dl %>% filter(antigen=="sea") %>% mutate(dummy=0)
-fitp_seaci <- gamCI(m=fitp_sea,newdata=newd,nreps=10000)
-
-fit_seroprev <- bind_rows(fitp_msp1ci,fitp_vsp5ci,fitp_ashbci,fitp_nieci,fitp_seaci)
+fit_seroprev <- bind_rows(fitp_ashbci,fitp_seaci,fitp_msp1ci,fitp_vsp5ci)
 
 # convert linear predictor to prevalance
 expitfn <- function(x) {
@@ -342,8 +348,8 @@ fit_seroprev <- fit_seroprev %>%
 
 ```{r seroprev by age plot}
 
-pageprev <- ggplot(data=fit_seroprev,aes(x=age,y=fit,color=antigen)) +
-  facet_grid(~antigen) +
+pageprev <- ggplot(data=fit_seroprev,aes(x=age,y=fit,color=antigenf)) +
+  facet_grid(~antigenf) +
   geom_ribbon(aes(ymin=lwrS,ymax=uprS),alpha=0.2,color=NA,fill="grey50") +
   geom_line(lwd=0.5,alpha=0.5) +
   geom_smooth(method="loess",se=FALSE,lwd=0.5) +
@@ -401,7 +407,7 @@ pmfivprev <- ggplot(data=dlc,aes(x=meanmfi,color=antigenf)) +
 pmfivprev
 
 # save png file for presentation
-ggsave(filename=here("output","mbita-mfi-v-seroprev.png"),plot=pmfivprev,device="png",width=10,height=2.5)
+ggsave(filename=here("output","mbita-mfi-v-seroprev.png"),plot=pmfivprev,device="png",width=8,height=2.5)
 
 
 ```
@@ -466,7 +472,7 @@ pfoivmfi <- ggplot(data=d_foi,aes(x=meanmfi,y=lambda,color=antigenf)) +
             aes(x=2.5,y=0.6,label=paste("rho ==",sprintf("%1.2f",cormfi)) ),
             parse=TRUE,col="grey30") +
   scale_x_continuous(breaks=2:4)+
-  scale_color_manual(values=pcols[c(3,4)])+
+  scale_color_manual(values=pcols[c(2,3)])+
   coord_cartesian(xlim=c(2,4.5),ylim=c(0,0.7)) +
   labs(x="community mean log10 MFI",y=expression(paste("community seroconversion rate (",lambda,")"))) +
   theme_minimal() +
@@ -487,7 +493,7 @@ pfoivprev <- ggplot(data=d_foi,aes(x=prevroc,y=lambda,color=antigenf)) +
             aes(x=0.2,y=0.6,label=paste("rho ==",sprintf("%1.2f",corprev)) ),
             parse=TRUE,col="grey30") +
   scale_x_continuous(breaks=seq(0,1,by=0.2),labels=seq(0,100,by=20))+
-  scale_color_manual(values=pcols[c(3,4)])+
+  scale_color_manual(values=pcols[c(2,3)])+
   coord_cartesian(xlim=c(0,1),ylim=c(0,0.7)) +
   labs(x="community seroprevalence (%)",y=expression(paste("community seroconversion rate (",lambda,")"))) +
   theme_minimal() +
@@ -497,101 +503,137 @@ pfoivprev
 
 ```
 
-## Semiparametric rate model
+# Effect of smaller samples
 
-Semiparametric estimates provide age-specific rates. To compare the estimator with constant rate models, we can average over the empirical distribution of age in the study population.  
-$\hat{\lambda} = \int_a \lambda(a) P(A=a)$
+Downsample the observations within each community to see how that influences the relationships
 
-```{r pop avg foi from gam}
-# # ----------------------------
-# # function to estimate the
-# # average FOI over empirical
-# # age distribution
-# # the predictions are based
-# # on a spline fit and its
-# # derivative
-# # gridA is a grid of predicted
-# # ages
-# # pA is the empirical
-# # age distribution
-# # ----------------------------
-# 
-# pAfoi <- function(m,gridA,pA,eps=1e-07,level=0.95,nreps=10000) {
-#   
-#   # variance-covariance matrix from the spline fit
-#   # unconditional on the fit of the mean
-#   # this is slightly more conservative and with better coverage
-#   # properties. 
-#   # See Marra G, Wood SN. 
-#   # Coverage Properties of Confidence Intervals 
-#   # for Generalized Additive Model Components.   
-#   # Scand Stat Theory Appl. 2012;39: 53–74.
-#   Vb <- vcov(m,unconditional = TRUE)
-#   
-#   # calculate the linear predictor, g(Ft), and its pointwise SE
-#   pred <- predict(m, newdata=gridA, se.fit = TRUE)
-#   Ft <- pred$fit
-#   Ft.se <- pred$se.fit
-# 
-#   # calculate the derivative, g'(Ft), using
-#   # finite differences and its pointwise SE
-#   # ?mgcv::predict.gam includes an example of this
-#   X0 <- predict(m, gridA, type = "lpmatrix")
-#   gridA2 <- gridA+eps
-#   X1 <- predict(m,gridA2,type='lpmatrix')
-#   Xp <- (X1 - X0) / eps
-#   ft <- Xp %*% coef(m)
-#   ft.se <- rowSums(Xp %*% Vb * Xp)^0.5
-#   
-#   # parametric bootstrap simulation from the
-#   # model coefficient estimates, assuming the model is true
-#   # FOI is the derivative of the linear predictor
-#   # multiplied by the predicted probability, Ft
-#   sims<- MASS::mvrnorm(n = nreps, mu = coef(m), Sigma = Vb)
-#   Ft.bs <- X0 %*% t(sims)
-#   ft.bs <- Xp %*% t(sims)
-#   foi.bs <- ft.bs*(exp(Ft.bs)/(1+exp(Ft.bs)))
-#   
-#   # merge the parametric bootstrap draws to the empirical 
-#   # distribution
-#   foi.bs <- data.frame(age=gridA$age,foi.bs)
-#   pA_foi.bs <- left_join(data.frame(age=pA),foi.bs,by="age") %>%
-#     select(-age)
-#   
-#   # Average over age for each bootstrap replication
-#   foi_bs <- colMeans(pA_foi.bs,na.rm=T)
-#   
-#   # estimate mean and 
-#   # percentile based 95% CIs
-#   foi <- mean(foi_bs)
-#   foi.se <- sd(foi_bs)
-#   foi.ci <- quantile(foi_bs,probs=c(0.025,0.975))  
-# 
-#   # return objects
-#   list(foi=foi,foi.se=foi.se,foi.ci=foi.ci,model=m,gridA=gridA,pA=pA)
-#   
-# }
+Note: this analysis probably won't contribute to the presentation because not sufficient time to think about it and interpret it. 
+
+```{r community downsample}
+
+# estimate means with sample sizes of betweeen 10 and 50 observations
+set.seed(123)
+ssests <- foreach(ssi=seq(100,10,by=-10),.combine=rbind) %:% 
+  foreach(iteri=1:1000,.combine=rbind) %dopar% {
+    di <- dl %>%
+    group_by(community,antigenf) %>%
+    sample_n(size=ssi,replace=TRUE) %>%
+    summarize(meanmfi=mean(logmfi),
+              seroprev=mean(seropos)) %>%
+    mutate(ss=ssi,iter=iteri)
+}
+
+# merge in the means with the full sample
+dlc2 <- dlc %>%
+  select(community,antigenf,n,mean=meanmfi,serop=prevroc) %>%
+  left_join(select(d_foi,community,antigenf,lambda),by=c("community","antigenf")) %>%
+  mutate(antigenf=factor(antigenf,levels=levels(dl$antigenf)))
+ssests2 <- left_join(ssests,dlc2,by=c("community","antigenf"))
 
 
-# # FOI from spline fits
-# agegrid <- data.frame(age=unique(dl$age))
-# popavgfoi <- foreach(ab=c("sea","msp1"),.combine=rbind) %:% 
-#   foreach(comi=levels(dl$community),.combine=rbind) %do%{
-#     pd <- dl %>% filter(antigen==ai & community==comi)
-#     mi <- mgcv::gam(seropos~s(age,bs="cr"),data=pd,family="binomial")
-#     foii <- pAfoi(m=mi,gridA=agegrid,pA=pd$age)
-#     di <- data.frame(antigen=ab,community=comi,
-#                      foi=foii$foi,
-#                      foi_se=foii$foi.se,
-#                      foi_lb=foii$foi.ci[1],
-#                      foi_ub=foii$foi.ci[2])
-#     return(di)
-# }
-# 
-# 
-# # merge semiparametric FOI estimates to the previous estimates
-# popavgfoi <- popavgfoi %>% mutate(community=factor(community))
-# d_spfoi <- left_join(d_foi,popavgfoi,by=c("antigen","community"))
+# average over bootstrap estimates
+ssmeans <- ssests2 %>%
+  group_by(community,antigenf,ss) %>%
+  summarize(mean=mean(mean),
+            mu=mean(meanmfi),
+            mu_sd=sd(meanmfi),
+            mu_lb=quantile(meanmfi,probs=c(0.025)),
+            mu_ub=quantile(meanmfi,probs=c(0.975)),
+            mu_mse=mean((meanmfi-mean)^2),
+            mu_bias=mean(meanmfi-mean),
+            
+            serop=mean(serop),
+            prev=mean(seroprev),
+            prev_sd=sd(seroprev),
+            prev_lb=quantile(seroprev,probs=c(0.025)),
+            prev_ub=quantile(seroprev,probs=c(0.975)),
+            prev_mse=mean((seroprev-serop)^2),
+            prev_bias=mean(seroprev-serop)
+            )
+
+# correlation betwen community-level means and seroprev, over bootstrap estimates
+sscorr <- ssests2 %>%
+  group_by(antigenf,ss,iter) %>%
+  summarize(cor_mean=cor(meanmfi,serop,method="pearson"),
+            cor_prev=cor(seroprev,serop,method="pearson")) %>%
+  ungroup() %>%
+  group_by(antigenf,ss) %>%
+  summarize(cor_mu=mean(cor_mean),
+            cor_mu_lb=quantile(cor_mean,probs=c(0.025)),
+            cor_mu_ub=quantile(cor_mean,probs=c(0.975)),
+            cor_pr=mean(cor_prev),
+            cor_pr_lb=quantile(cor_prev,probs=c(0.025)),
+            cor_pr_ub=quantile(cor_prev,probs=c(0.975)),
+            )
+
+# correlation betwen community-level means and seroprev, over bootstrap estimates
+sscorr_foi <- ssests2 %>%
+  group_by(antigenf,ss,iter) %>%
+  filter(!is.na(lambda)) %>%
+  summarize(cor_mean=cor(meanmfi,lambda,method="spearman"),
+            cor_prev=cor(seroprev,lambda,method="spearman")) %>%
+  ungroup() %>%
+  group_by(antigenf,ss) %>%
+  summarize(cor_mu=mean(cor_mean),
+            cor_mu_lb=quantile(cor_mean,probs=c(0.025)),
+            cor_mu_ub=quantile(cor_mean,probs=c(0.975)),
+            cor_pr=mean(cor_prev),
+            cor_pr_lb=quantile(cor_prev,probs=c(0.025)),
+            cor_pr_ub=quantile(cor_prev,probs=c(0.975)),
+            )
 
 ```
+Plot a figure of RMSE in community-level estimates by sample size.
+```{r downsample rmse figs}
+ssmumsep <- ggplot(data=ssmeans,aes(x=ss,y=sqrt(mu_mse),group=community)) +
+  facet_grid(.~antigenf)+
+  geom_line(alpha=0.2) +
+  theme_minimal()
+ssmumsep
+
+ssprevmsep <- ggplot(data=ssmeans,aes(x=ss,y=sqrt(prev_mse),group=community)) +
+  facet_grid(.~antigenf)+
+  geom_line(alpha=0.2) +
+  theme_minimal()
+ssprevmsep
+
+```
+
+Plot a figure of the correlation between the seroprevalence estimated in the full sample versus cluster level mean (blue) or cluster level seroprevalence (orange) estimated at each smaller sample size
+
+```{r downsample corr figure}
+sscorp <- ggplot(data=sscorr,aes(x=ss)) +
+  facet_grid(.~antigenf)+
+  geom_ribbon(aes(ymin=cor_mu_lb,ymax=cor_mu_ub),color=NA,fill=cblue,alpha=0.2)+
+  geom_line(aes(y=cor_mu),color=cblue) +
+  geom_ribbon(aes(ymin=cor_pr_lb,ymax=cor_pr_ub),color=NA,fill=corange,alpha=0.2)+
+  geom_line(aes(y=cor_pr),color=corange)+
+  coord_cartesian(ylim=c(0,1))+
+  labs(y="Correlation with community level seroprevalence",x="Sample size per community") +
+  theme_minimal()
+sscorp
+
+```
+
+Plot a figure of the correlation between the seroconversion rate estimated in the full sample versus cluster level mean (blue) or cluster level seroprevalence (orange) estimated at each smaller sample size
+
+```{r downsample corr foi figure}
+sscorfoip <- ggplot(data=sscorr_foi,aes(x=ss)) +
+  facet_grid(.~antigenf)+
+  geom_ribbon(aes(ymin=cor_mu_lb,ymax=cor_mu_ub),color=NA,fill=cblue,alpha=0.2)+
+  geom_line(aes(y=cor_mu),color=cblue) +
+  geom_ribbon(aes(ymin=cor_pr_lb,ymax=cor_pr_ub),color=NA,fill=corange,alpha=0.2)+
+  geom_line(aes(y=cor_pr),color=corange)+
+  coord_cartesian(ylim=c(0,1))+
+  labs(y="Correlation with community level seroconversion rate",x="Sample size per community") +
+  theme_minimal()
+sscorfoip
+
+```
+
+Based on these figures, there is no loss of information from reducing quantitative measures to seroprevalence, and if anything seroprevalence performs slightly better with respect to correlation measures.
+
+
+
+
 
